# moeflux

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  NOTES.md  README.md  fast_moe_load.c  repack_experts.py  results.tsv  setup_cext.py  test_fast_moe_load.py
crates/moeflux/: Cargo.toml
crates/moeflux-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/moeflux-sys/metal_infer/: Makefile  export_vocab.py  infer.m  moeflux.h
crates/moeflux-sys/metal_infer/tests/mlx_reference/: README.md  diff_gate_outputs.py  diff_layer_inputs.py
crates/moeflux-sys/src/: lib.rs
crates/moeflux-sys/tests/: link.rs
crates/moeflux/shaders/: shaders.metal
crates/moeflux/src/: imp.rs  lib.rs
crates/moeflux/src/riir/: cogito_moe_gpu.rs  cpu_matvec.rs  cpu_ops.rs  deferred.rs  dense_mlp_gpu.rs  embedding.rs  expert_forward.rs  expert_io.rs  full_attn_forward.rs  gpu_attn.rs  gpu_linear_attn.rs  gpu_lm_head.rs  gpu_matvec.rs  gpu_mla.rs  gpu_norm.rs  gpu_rope.rs  layer_weight_cache.rs  linear_attn.rs  linear_attn_forward.rs  lm_head.rs  metal.rs  mla_attn_cpu.rs  mla_attn_forward.rs  mlp_cpu.rs  mod.rs  moe_cpu.rs  moe_router.rs  mtl_weight_buf.rs  prefetch.rs  rms_norm.rs  rope.rs  sdpa.rs  state.rs  state_snapshot.rs  variants.rs  weight_file.rs
crates/moeflux/tests/: checkpoint_restore.rs  cogito_moe_gpu.rs  cogito_v2_smoke.rs  consecutive_eval_prompt.rs  dense_mlp_gpu.rs  diff_oracle.rs  mla_sdpa_tiled.rs  mlx_regression.rs  smoke.rs  snapshot_v2_roundtrip.rs
crates/moeflux/tests/common/: c_backend.rs  mod.rs
crates/moeflux/tests/fixtures/: cogito_v2_oracle.response.json  cogito_v2_oracle.sse.jsonl  mlx_golden_qwen3-6-35b-a3b.txt
docs/: model_variants.md
metal_infer/: Makefile  chat  chat.m  extract_weights.py  infer  infer.m  model_variant.h  moeflux.h  shaders.metal
metal_infer/tests/mlx_reference/: README.md  diff_l0_components.py  generate_goldens.py  mlx_layer_dump.py
scripts/: profile_aggregate.py  profile_smoke.sh
tests/: smoke.c
tools/: convert_cogito_v2.py  gen_expert_index.py
