[workspace]
resolver = "2"
members = [
    "crates/moeflux-sys",
    "crates/moeflux",
]

[workspace.package]
version       = "0.1.0-pre.0"
edition       = "2024"
rust-version  = "1.89"
license       = "MIT"
repository    = "https://github.com/mdegans/moeflux"
authors       = ["Michael de Gans <michael.john.degans@gmail.com>"]

[workspace.dependencies]
moeflux-sys = { path = "crates/moeflux-sys", version = "=0.1.0-pre.0" }

[profile.release]
opt-level = 3
lto       = "thin"
