[workspace]
resolver = "2"
members = [
    "crates/moeflux-sys",
    "crates/moeflux",
]

[workspace.package]
version       = "0.1.0-pre.0"
edition       = "2024"
rust-version  = "1.89"
license       = "MIT"
repository    = "https://github.com/mdegans/moeflux"
authors       = ["Michael de Gans <michael.john.degans@gmail.com>"]

[workspace.dependencies]
moeflux-sys = { path = "crates/moeflux-sys", version = "=0.1.0-pre.0" }
thiserror   = "1.0"
memmap2     = "0.9"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# Metal bindings for the RIIR port. Mature, used by candle / mistral.rs.
# objc-related transitive deps come from metal-rs's `link` feature.
metal       = "0.32"
# Work-stealing thread pool for parallel K-expert pread (slice 5d-6).
rayon       = "1.10"

[profile.release]
opt-level = 3
lto       = "thin"
