[package]
name          = "moeflux-sys"
description   = "Raw FFI bindings to the moeflux streaming-experts MoE Metal backend."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
links         = "moeflux"
readme        = "README.md"
# Don't publish the 69GB of model weights + Metal shaders by accident.
# Only the C/Objective-C sources + header + build.rs get packaged.
# Phase 6 relocated metal_infer/ inside this crate so `cargo publish`
# can verify a self-contained build. The shader source-of-truth lives
# with the moeflux crate (`crates/moeflux/shaders/`) and is read by
# moeflux::imp at runtime; moeflux-sys doesn't ship the shader.
include       = [
    "src/**",
    "metal_infer/*.m",
    "metal_infer/*.h",
    "build.rs",
    "wrapper.h",
    "README.md",
    "LICENSE",
]

[features]
# No default — exactly one model variant must be selected by the
# consuming crate. See model_variant.h in the C sources for the
# full list; downstream docs in docs/model_variants.md.
default = []

model-qwen3-5-a17b      = []
model-qwen3-6-35b-a3b   = []
# Forwarded from moeflux for symmetry; no C-side variant exists
# yet. build.rs skips the C compile when only this feature is set
# and writes an empty bindings.rs so lib.rs's `include!()` is a
# no-op. The diff-oracle tests gate themselves on the C-supported
# variants and skip when this is the active variant.
model-cogito-v2-671b    = []

[build-dependencies]
cc      = "1"
bindgen = "0.72"
