[package]
name          = "moeflux"
description   = "Safe Rust bindings to the moeflux streaming-experts MoE Metal backend."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
readme        = "README.md"

[features]
default = []

# Re-exported variant features — consumers select the model here and
# the -sys crate gets the matching C define via build.rs.
model-qwen3-5-a17b      = ["moeflux-sys/model-qwen3-5-a17b"]
model-qwen3-6-35b-a3b   = ["moeflux-sys/model-qwen3-6-35b-a3b"]

# RIIR port toggle. When on, exposes `moeflux::riir` containing the
# pure-Rust implementation (under construction). When off (default),
# only the C-via-`moeflux-sys` path is available. Both can be on
# simultaneously, which is the configuration the differential test
# harness uses. Removed at the Phase 6 cutover, when the Rust path
# becomes the only path.
riir-port = [
    "dep:thiserror",
    "dep:memmap2",
    "dep:serde",
    "dep:serde_json",
    "dep:metal",
    "dep:rayon",
]

[dependencies]
moeflux-sys = { workspace = true }
thiserror   = { workspace = true, optional = true }
memmap2     = { workspace = true, optional = true }
serde       = { workspace = true, optional = true }
serde_json  = { workspace = true, optional = true }
metal       = { workspace = true, optional = true }
rayon       = { workspace = true, optional = true }
