[package]
name          = "moeflux"
description   = "Pure-Rust streaming-experts MoE inference on Metal. Forked from flash-moe; only the Metal kernels remain from upstream."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
readme        = "README.md"

[features]
default = []

# Model variant features. Select exactly one. Forwards to moeflux-sys
# (when `diff-oracle` is also enabled) so the C-side oracle gets the
# matching `MOEFLUX_MODEL_*` define for differential testing.
model-qwen3-5-a17b      = ["moeflux-sys?/model-qwen3-5-a17b"]
model-qwen3-6-35b-a3b   = ["moeflux-sys?/model-qwen3-6-35b-a3b"]

# Differential-oracle backend. Compiles the C-via-`moeflux-sys` path
# alongside the Rust port for the integration test suite. Test-only
# in practice — production drama_llama doesn't need it. Phase 6 gated
# the C path here rather than deleting it; the diff oracle stays as
# a regression net for DeepSeek-V3 / Cogito-V2 671B / runtime-variant
# work.
diff-oracle = ["dep:moeflux-sys"]

[dependencies]
moeflux-sys = { workspace = true, optional = true }
thiserror   = { workspace = true }
memmap2     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
metal       = { workspace = true }
rayon       = { workspace = true }
